# payments-erc20-lib

./: Cargo.toml  README.md
.github/workflows/: build_nigthly.yml  deposit.yml  deposit2.yml  distribute.yml  release.yml
crates/erc20_payment_lib/: Cargo.toml  config-payments.toml
crates/erc20_payment_lib/contracts/: lock_payments.json  wrapper_call.json
crates/erc20_payment_lib/src/: account_balance.rs  config.rs  contracts.rs  eth.rs  runtime.rs  setup.rs  transaction.rs
crates/erc20_payment_lib/src/sender/: process.rs  service.rs
crates/erc20_payment_lib/src/server/: web.rs
crates/erc20_payment_lib_common/: Cargo.toml
crates/erc20_payment_lib_common/migrations/: 20240422000000_clean_deposit_id.sql  20240729000000_add_payment_id_idx.sql
crates/erc20_payment_lib_common/src/: dns_over_https_resolver.rs  lib.rs
crates/erc20_payment_lib_common/src/db/: connection.rs
crates/erc20_payment_lib_extra/: Cargo.toml
crates/erc20_payment_lib_extra/src/: account_balance.rs
crates/erc20_payment_lib_test/: Cargo.toml
crates/erc20_payment_lib_test/src/: config_setup.rs
crates/erc20_rpc_pool/: Cargo.toml
crates/web3_account_server/: Cargo.toml  README.md
crates/web3_account_server/src/: main.rs
crates/web3_test_proxy/: Cargo.toml
crates/web3_test_proxy_client/: Cargo.toml
scenarios/test_get_balance/: run_test.py
src/: actions.rs  main.rs  options.rs
src/actions/attestation/: check.rs
src/actions/deposit/: close.rs  create.rs  details.rs  terminate.rs
yatestnet/contracts/contracts/: LockPayment.sol
(+4 files in other folders)
