[package]
name = "web3_account_server"
version = "0.4.8"
edition = "2021"
authors = ["Golem Factory <contact@golem.network>"]
description = "Helper for blockchain integration tests"
repository = "https://github.com/scx1332/"

[dependencies]
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
env_logger =  { workspace = true }
hex =  { workspace = true }
log =  { workspace = true }
serde =  { workspace = true }
serde_json =  { workspace = true }
